docs: update Swagger docs
