# dto/website.go
@@ -18,18 +18,47 @@ import (
 )
 
 // WebsiteOnCreate represents website creation payload.
+// swagger:model WebsiteOnCreate
 type WebsiteOnCreate struct {
-	URL   string `json:"url" binding:"required,url"`
+	// Website URL
+	//
+	// required: true
+	// example: https://eample.com
+	URL string `json:"url" binding:"required,url"`
+
+	// Website security Token
+	//
+	// required: true
+	// example: h^djncU878*jKCN&87I#DK
 	Token string `json:"token" binding:"required"`
 }
 
 // WebsiteOnResponse represents website response payload.
+// swagger:model WebsiteOnResponse
 type WebsiteOnResponse struct {
-	ID        uuid.UUID `json:"id" binding:"required"`
+	// Website ID
+	//
+	// required: true
+	// swagger:strfmt uuid
+	ID uuid.UUID `json:"id" binding:"required"`
+
+	// Website creation date and time
+	//
+	// required: true
 	CreatedAt time.Time `json:"createdAt" binding:"required"`
+
+	// Website update date and time
+	//
+	// required: true
 	UpdatedAt time.Time `json:"updatedAt" binding:"required"`
-	URL       string    `json:"url" binding:"required"`
+
+	// Website URL
+	//
+	// required: true
+	// example: https://eample.com
+	URL string `json:"url" binding:"required"`
 }
 
 // WebsitesOnResponse represents multiple WebsiteOnResponse-s.
+// swagger:model WebsitesOnResponse
 type WebsitesOnResponse []WebsiteOnResponse
